c4prj2_input/grade.txt
Grading at Mon Jan 13 03:14:26 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:14:13: error: ‘str’ undeclared (first use in this function)
         if((str[i] == '\n')||(str[i] == ' ')) continue;
             ^
input.c:14:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
